--- a/google-siginin-page2.html
+++ b/google-siginin-page2.html
@@ -16,13 +16,13 @@
     <div class="popup">
         <div class="google-login">
             <div class="left-section">
-                <img src="Images/Logo/google-color-svgrepo-com.svg" alt="google-logo">
+                <img src="images/Logo/google-color-svgrepo-com.svg" alt="google-logo">
                 <div class="welcome">Welcome</div>
                 <div class="gmail-container">
                     <div class="gmail">
-                        <img src="Images/Symbols/account2.svg" alt="user">
+                        <img src="images/Symbols/account2.svg" alt="user">
                         <div>sachinpathak9930@gmail.com</div>
-                        <img src="Images/Symbols/dropdown-svgrepo-com.svg" alt="dropdown">
+                        <img src="images/Symbols/dropdown-svgrepo-com.svg" alt="dropdown">
                     </div>
                 </div>
             </div>
