--- a/youtubeclone-base-no-login.html
+++ b/youtubeclone-base-no-login.html
@@ -17,11 +17,11 @@
     <div class="header">
         <div class="left-section">
                 <a href="youtubeclone-nologin-protab.html">
-                    <img class="menu" src="Images/Symbols/menu2.svg" alt="menu">
+                    <img class="menu" src="images/Symbols/menu2.svg" alt="menu">
                 </a>
             <a href="youtubeclone.html">
                 <div class="yt-logo-container">
-                    <img class="youtube-logo" src="Images/Symbols/youtube1.svg" alt="logo">
+                    <img class="youtube-logo" src="images/Symbols/youtube1.svg" alt="logo">
                     <!-- <div class="tool-tip">Youtube Home</div> -->
             </a>
             </div>
@@ -29,21 +29,21 @@
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button">
-                <img src="Images/Symbols/search2.svg" alt="search">
+                <img src="images/Symbols/search2.svg" alt="search">
                 <div class="tool-tip">Search</div>
             </button>
             <button class="voice-search-button">
-                <img src="Images/Symbols/mic2.svg" alt="bot"> 
+                <img src="images/Symbols/mic2.svg" alt="bot"> 
                 <div class="tool-tip">Search with your voice</div>        
             </button>
         </div>
         <div class="right-section">
             <div class="dots">
-                <img src="Images/Symbols/header icon/3dots.svg" alt="">
+                <img src="images/Symbols/header icon/3dots.svg" alt="">
             </div>
             <a href="google-signin-page1.html">
                 <div class="login-button">
-                    <img src="Images/Symbols/account-signin.svg" alt="P">
+                    <img src="images/Symbols/account-signin.svg" alt="P">
                     <div>Sign in</div>
                 </div>
             </a>
@@ -52,19 +52,19 @@
 
     <aside>
         <div class="side-tabs">
-            <img class="icon" src="Images/Symbols/home.svg" alt="home">
+            <img class="icon" src="images/Symbols/home.svg" alt="home">
             <div>Home</div>
         </div>
         <div class="side-tabs">
-            <img class="icon" src="Images/Symbols/sidebar icon/shorts.svg" alt="home">
+            <img class="icon" src="images/Symbols/sidebar icon/shorts.svg" alt="home">
             <div>Shorts</div>
         </div>
         <div class="side-tabs">
-            <img src="Images/Symbols/sidebar icon/subscriptions.svg" alt="home">
+            <img src="images/Symbols/sidebar icon/subscriptions.svg" alt="home">
             <div>Subscriptions</div>
         </div>
         <div class="side-tabs">
-            <img src="Images/Symbols/sidebar icon/you.svg" alt="home">
+            <img src="images/Symbols/sidebar icon/you.svg" alt="home">
             <div>You</div>
         </div>
     </aside>
