--- a/youtubeclone-base.html
+++ b/youtubeclone-base.html
@@ -16,11 +16,11 @@
     <div class="header">
         <div class="left-section">
                 <a href="youtubeclone-base-protab.html">
-                    <img class="menu" src="Images/Symbols/menu2.svg" alt="menu">
+                    <img class="menu" src="images/Symbols/menu2.svg" alt="menu">
                 </a>
             <a href="youtubeclone.html">
                 <div class="yt-logo-container">
-                    <img class="youtube-logo" src="Images/Symbols/youtube1.svg" alt="logo">
+                    <img class="youtube-logo" src="images/Symbols/youtube1.svg" alt="logo">
                     <!-- <div class="tool-tip">Youtube Home</div> -->
             </a>
             </div>
@@ -28,42 +28,42 @@
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button">
-                <img src="Images/Symbols/search2.svg" alt="search">
+                <img src="images/Symbols/search2.svg" alt="search">
                 <div class="tool-tip">Search</div>
             </button>
             <button class="voice-search-button">
-                <img src="Images/Symbols/mic2.svg" alt="bot"> 
+                <img src="images/Symbols/mic2.svg" alt="bot"> 
                 <div class="tool-tip">Search with your voice</div>        
             </button>
         </div>
         <div class="right-section">
-            <button class="upload-icon"><img src="Images/Symbols/header icon/upload.svg" alt="up">
+            <button class="upload-icon"><img src="images/Symbols/header icon/upload.svg" alt="up">
                 <div class="tool-tip">Create</div>             
             </button>
             <div class="notification-icon-container">
                 <div class="tool-tip">Notification</div>  
-            <button class="notification-icon"><img src="Images/Symbols/notification.svg" alt=""></button>
+            <button class="notification-icon"><img src="images/Symbols/notification.svg" alt=""></button>
             <div class="notification-count">9+</div>
             </div>
-            <button class="profile-icon"><img src="Images/Profile/sachin.jpg" alt="P"></button>
+            <button class="profile-icon"><img src="images/Profile/sachin.jpg" alt="P"></button>
         </div>
     </div>
 
     <aside>
         <div class="side-tabs">
-            <img class="icon" src="Images/Symbols/home.svg" alt="home">
+            <img class="icon" src="images/Symbols/home.svg" alt="home">
             <div>Home</div>
         </div>
         <div class="side-tabs">
-            <img class="icon" src="Images/Symbols/sidebar icon/shorts.svg" alt="home">
+            <img class="icon" src="images/Symbols/sidebar icon/shorts.svg" alt="home">
             <div>Shorts</div>
         </div>
         <div class="side-tabs">
-            <img src="Images/Symbols/sidebar icon/subscriptions.svg" alt="home">
+            <img src="images/Symbols/sidebar icon/subscriptions.svg" alt="home">
             <div>Subscriptions</div>
         </div>
         <div class="side-tabs">
-            <img src="Images/Symbols/sidebar icon/you.svg" alt="home">
+            <img src="images/Symbols/sidebar icon/you.svg" alt="home">
             <div>You</div>
         </div>
     </aside>
@@ -72,12 +72,12 @@
         <a href="https://youtu.be/r9jLXHDHYXc?si=OomtggPlXfiFIj1w">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail1.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail1.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">52:18</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp1.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp1.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -96,12 +96,12 @@
         <a href="https://youtu.be/Zdk01t_VTOA?si=lFV75rXEoCF0tY2w">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail2.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail2.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">3:07:27</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp2.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp2.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -120,12 +120,12 @@
         <a href="https://youtu.be/xdHx1YEsWwk?si=kO6pP9HYDjxgR1xS">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail3.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail3.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">16:25</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp3.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp3.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -144,12 +144,12 @@
         <a href="https://youtu.be/V0q9x_VcUPY?si=M8w-gxwL482tGbF-">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail4.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail4.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">10:00</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp4.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp4.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -168,12 +168,12 @@
         <a href="https://youtu.be/pJnOV-4ZVNk?si=U6_j2EDjWr_960RT">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail5.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail5.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">59:44</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp5.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp5.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -192,12 +192,12 @@
         <a href="https://youtu.be/-OZY6nkb1pM?si=wHyozsztXmU_9jQG">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail6.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail6.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">20:04</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp6.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp6.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -216,12 +216,12 @@
         <a href="https://youtu.be/W2eo5BtqQuY?si=h_pn3ffBPfKmfLq6">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail7.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail7.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">17:01</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp7.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp7.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -240,12 +240,12 @@
         <a href="https://youtu.be/WuwBW8vSrfg?si=dfcmrvno2SjMNvG8">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail8.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail8.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">4:50</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp8.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp8.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -264,12 +264,12 @@
         <a href="https://youtu.be/FS_6NTQOw2k?si=2pfXFoBIBBFTBQuQ">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail9.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail9.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">16:49</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp9.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp9.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -288,12 +288,12 @@
         <a href="https://youtu.be/nt01XEmwVDo?si=c1Xe78c9mK_rc4ES">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail10.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail10.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">2:00</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp10.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp10.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -312,12 +312,12 @@
         <a href="https://youtu.be/IPDxmswxWVE?si=n6QJx1DQRcop4XpR">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail11.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail11.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">22:26</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp11.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp11.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -336,12 +336,12 @@
         <a href="https://youtu.be/yU7KdLbLUVA?si=j5rnjt-zA-feBp6g">
             <div class="video-preview">
                 <div class="thumbnail-row">
-                   <img src="Images/Thumbnail/thumbnail12.webp" alt="thumbnail" class="thumbnail">
+                   <img src="images/Thumbnail/thumbnail12.webp" alt="thumbnail" class="thumbnail">
                    <div class="video-time">3:21</div>
                 </div>
                 <div class="video-info-grid">
                     <div class="channel-picture">
-                        <img class="profile-picture" src="Images/channel-pics/cp10.jpg" alt="">
+                        <img class="profile-picture" src="images/channel-pics/cp10.jpg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
