--- a/youtubeclone-nologin-protab.html
+++ b/youtubeclone-nologin-protab.html
@@ -17,11 +17,11 @@
     <div class="header">
         <div class="left-section">
                 <a href="youtubeclone-nologin-protab.html">
-                    <img class="menu" src="Images/Symbols/menu2.svg" alt="menu">
+                    <img class="menu" src="images/Symbols/menu2.svg" alt="menu">
                 </a>
                 <div class="yt-logo-container">
             <a href="youtubeclone.html">
-                    <img class="youtube-logo" src="Images/Symbols/youtube1.svg" alt="logo">
+                    <img class="youtube-logo" src="images/Symbols/youtube1.svg" alt="logo">
                     <!-- <div class="tool-tip">Youtube Home</div> -->
             </a>
             </div>
@@ -29,20 +29,20 @@
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button">
-                <img src="Images/Symbols/search2.svg" alt="search">
+                <img src="images/Symbols/search2.svg" alt="search">
                 <div class="tool-tip">Search</div>
             </button>
             <button class="voice-search-button">
-                <img src="Images/Symbols/mic2.svg" alt="bot"> 
+                <img src="images/Symbols/mic2.svg" alt="bot"> 
                 <div class="tool-tip">Search with your voice</div>        
             </button>
         </div>
         <div class="right-section">
             <div class="dots">
-                <img src="Images/Symbols/header icon/3dots.svg" alt="">
+                <img src="images/Symbols/header icon/3dots.svg" alt="">
             </div>
             <div class="login-button">
-                <img src="Images/Symbols/account-signin.svg" alt="P">
+                <img src="images/Symbols/account-signin.svg" alt="P">
                 <div>Sign in</div>
             </div>
         </div>
@@ -50,29 +50,29 @@
     <div class="sidebar">
        <div class="sidebar-header">
             <a href="youtubeclone-base-no-login.html">
-                <img class="protab-menu" src="Images/Symbols/menu2.svg" alt="menu">
+                <img class="protab-menu" src="images/Symbols/menu2.svg" alt="menu">
             </a>
             <a href="youtubeclone-base-no-login.html">
-                <img class="protab-yt-logo" src="Images/Symbols/youtube1.svg" alt="logo">
+                <img class="protab-yt-logo" src="images/Symbols/youtube1.svg" alt="logo">
             </a>
        </div>
        <div class="scrollbar">
             <div class="sections">
                 <a href="youtubeclone-nologin-protab.html">
                     <div id="selected-tab" class="tabs">
-                        <img src="Images/Symbols/home.svg" alt="home">
+                        <img src="images/Symbols/home.svg" alt="home">
                         <div>Home</div>
                     </div>
                 </a>
                 <a href="">
                     <div class="tabs">
-                        <img src="Images/Symbols/sidebar icon/shorts.svg" alt="shorts">
+                        <img src="images/Symbols/sidebar icon/shorts.svg" alt="shorts">
                         <div>Shorts</div>
                     </div>
                 </a>
                 <a href="">
                     <div id="tab-s" class="tabs">
-                        <img id="subscription-img" src="Images/Symbols/sidebar icon/subscriptions.svg" alt="subscriptions">
+                        <img id="subscription-img" src="images/Symbols/sidebar icon/subscriptions.svg" alt="subscriptions">
                         <div>Subscriptions</div>
                     </div>
                 </a>
@@ -80,13 +80,13 @@
             <div class="sections">
                 <a href="">
                     <div class="tabs">
-                        <img id="you-img" src="Images/Symbols/sidebar icon/you.svg" alt="you">
+                        <img id="you-img" src="images/Symbols/sidebar icon/you.svg" alt="you">
                         <div>You</div>
                     </div>
                 </a>
                 <a href="">
                     <div class="tabs">
-                        <img id="history-img" src="Images/Symbols/sidebar icon/history.svg" alt="history">
+                        <img id="history-img" src="images/Symbols/sidebar icon/history.svg" alt="history">
                         <div>History</div>
                     </div>
                 </a>
@@ -95,7 +95,7 @@
                 <div class="tabs" id="login-tab">
                     <div id="Signin">Sign in to like videos, comment, and subscribe</div>
                     <div class="login-button">
-                        <img src="Images/Symbols/account-signin.svg" alt="P">
+                        <img src="images/Symbols/account-signin.svg" alt="P">
                         <div>Sign in</div>
                     </div>                    
                 </div>
@@ -106,67 +106,67 @@
                 </div>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/trending.svg" alt="fire">
+                    <img src="images/Symbols/sidebar icon/trending.svg" alt="fire">
                     <div>Trending</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/shopping.svg" alt="shop-bag">
+                    <img src="images/Symbols/sidebar icon/shopping.svg" alt="shop-bag">
                     <div>Shopping</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/music.svg" alt="music">
+                    <img src="images/Symbols/sidebar icon/music.svg" alt="music">
                     <div>Music</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/movies.svg" alt="movies">
+                    <img src="images/Symbols/sidebar icon/movies.svg" alt="movies">
                     <div>Movies</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/live.svg" alt="live">
+                    <img src="images/Symbols/sidebar icon/live.svg" alt="live">
                     <div>Live</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/gaming.svg" alt="gaming">
+                    <img src="images/Symbols/sidebar icon/gaming.svg" alt="gaming">
                     <div>Gaming</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/news.svg" alt="news">
+                    <img src="images/Symbols/sidebar icon/news.svg" alt="news">
                     <div>News</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/trophy.svg" alt="trophy">
+                    <img src="images/Symbols/sidebar icon/trophy.svg" alt="trophy">
                     <div>Sports</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/courses.svg" alt="courses">
+                    <img src="images/Symbols/sidebar icon/courses.svg" alt="courses">
                     <div>Courses</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/fashion.svg" alt="fashin&beauty">
+                    <img src="images/Symbols/sidebar icon/fashion.svg" alt="fashin&beauty">
                     <div>Fashion & Beauty</div>
                 </div>
                </a>
                <a href="">
                 <div class="tabs">
-                    <img src="Images/Symbols/sidebar icon/podcasts.svg" alt="podcasts">
+                    <img src="images/Symbols/sidebar icon/podcasts.svg" alt="podcasts">
                     <div>Podcasts</div>
                 </div>
                </a>
@@ -177,19 +177,19 @@
                 </div>
                 <a href="">
                  <div class="tabs">
-                     <img src="Images/Symbols/sidebar icon/youtube.svg" alt="yt-logo">
+                     <img src="images/Symbols/sidebar icon/youtube.svg" alt="yt-logo">
                      <div>YouTube Premium</div>
                  </div>
                 </a>
                 <a href="">
                  <div class="tabs">
-                     <img src="Images/Symbols/sidebar icon/youtube-music.svg" alt="yt-music">
+                     <img src="images/Symbols/sidebar icon/youtube-music.svg" alt="yt-music">
                      <div>YouTube Music</div>
                  </div>
                 </a>            
                 <a href="">
                  <div class="tabs">
-                     <img src="Images/Symbols/sidebar icon/youtube-kids.svg" alt="yt-kids">
+                     <img src="images/Symbols/sidebar icon/youtube-kids.svg" alt="yt-kids">
                      <div>YouTube Kids</div>
                  </div>
                 </a>   
@@ -197,25 +197,25 @@
             <div class="sections">                
                 <a href="">
                     <div class="tabs">
-                        <img src="Images/Symbols/sidebar icon/settings.svg" alt="settings">
+                        <img src="images/Symbols/sidebar icon/settings.svg" alt="settings">
                         <div>Settings</div>
                     </div>
                    </a>                
                    <a href="">
                        <div class="tabs">
-                           <img src="Images/Symbols/sidebar icon/repor.svg" alt="report">
+                           <img src="images/Symbols/sidebar icon/repor.svg" alt="report">
                            <div>Report history</div>
                        </div>
                     </a>                
                     <a href="">
                         <div class="tabs">
-                            <img src="Images/Symbols/sidebar icon/help.svg" alt="help">
+                            <img src="images/Symbols/sidebar icon/help.svg" alt="help">
                             <div>Help</div>
                         </div>
                      </a>                
                      <a href="">
                          <div class="tabs">
-                             <img src="Images/Symbols/sidebar icon/feedback.svg" alt="feedback">
+                             <img src="images/Symbols/sidebar icon/feedback.svg" alt="feedback">
                              <div>Send Feedback</div>
                          </div>
                       </a>
